@@ -22,6 +22,7 @@
 
 #include <config.h>
 #include <errno.h>
+#include <ctype.h>
 
 #include "utilvfs.h"
 #include "xdirentry.h"
